Update ConsoleController.java